[package]
name = "bevyterm"
authors = ["Michaël Mendes <michael.mendes1@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.10"
features = []

[dependencies]
anyhow = "1.0.69"
crossterm = "0.26.1"
